fix: apply contrast themes to banner image (WIP)

--- a/src/assets/styles/components/_banner.scss
+++ b/src/assets/styles/components/_banner.scss
@@ -1,6 +1,15 @@
 .banner {
-    background-image: url(../images/banner.svg), linear-gradient(to right, #158dcd 50%, #12699a 50%);
+    align-content: center;
+    background-image: linear-gradient(to right, #158dcd 50%, #12699a 50%);
     background-position: center;
     background-repeat: no-repeat;
+    display: flex;
     height: $banner-height;
+    justify-content: center;
+    overflow: hidden;
+    position: relative;
+
+    svg {
+        position: absolute;
+    }
 }
